--- a/CodecellComponent.Blazor/Components/PersianDatePickerComponent/PersianDatePicker.razor.scss
+++ b/CodecellComponent.Blazor/Components/PersianDatePickerComponent/PersianDatePicker.razor.scss
@@ -43,7 +43,7 @@
         }
     }
 
-    .persian-date-wraper {
+    .persian-date-wrapper {
         position: absolute;
         z-index: 999;
         background: #fff;
