--- a/CodecellComponent.Blazor/Components/PersianDatePickerComponent/PersianDatePicker.razor
+++ b/CodecellComponent.Blazor/Components/PersianDatePickerComponent/PersianDatePicker.razor
@@ -1,7 +1,10 @@
 ﻿<div class="persian-date-input">
     <div class="input-wrapper">
         <input class="p-date" readonly @onclick="OpenPicker" value="@selectedDateInPersianFormat" />
-        <a  class="clear">&#10006;</a>
+        @if (!string.IsNullOrWhiteSpace(selectedDateInPersianFormat))
+        {
+            <a @onclick="Clear" class="clear">&#10006;</a>
+        }
     </div>
     @if (openPicker)
     {
