--- a/CodecellComponent.Blazor/Components/PersianDatePickerComponent/PersianDatePicker.razor
+++ b/CodecellComponent.Blazor/Components/PersianDatePickerComponent/PersianDatePicker.razor
@@ -86,6 +86,11 @@
         }
     }
 
+    void Close()
+    {
+        openPicker = false;
+    }
+
     void PrepareCells(DateTime date)
     {
         cells = new();
