--- a/CodecellComponent.Blazor/Components/PersianDatePickerComponent/PersianDatePicker.razor.scss
+++ b/CodecellComponent.Blazor/Components/PersianDatePickerComponent/PersianDatePicker.razor.scss
@@ -45,7 +45,7 @@
     }
 
     .persian-date-wrapper {
-        position: absolute;
+        position: relative;
         z-index: 999;
         background: #fff;
         width: 240px;
