--- a/CodecellBlazorComponent.Sample/Pages/Home.razor
+++ b/CodecellBlazorComponent.Sample/Pages/Home.razor
@@ -4,7 +4,11 @@
 
 <h1>Hello, world!</h1>
 
-<PersianDatePicker @bind-Date="myDate"/>
+<div class="row">
+    <div class="col-12">
+        <PersianDatePicker @bind-Date="myDate" />
+    </div>
+</div>
 
 
 <p class="mt-2">@myDate</p>
