--- a/CodecellBlazorComponent.Sample/Pages/Home.razor
+++ b/CodecellBlazorComponent.Sample/Pages/Home.razor
@@ -5,7 +5,7 @@
 <h1>Hello, world!</h1>
 
 <div class="row">
-    <div class="col-12">
+    <div class="col-md-4">
         <PersianDatePicker @bind-Date="myDate" />
     </div>
 </div>
