--- a/CodecellBlazorComponent.Sample/Pages/Home.razor
+++ b/CodecellBlazorComponent.Sample/Pages/Home.razor
@@ -6,7 +6,9 @@
 
 <div class="row">
     <div class="col-md-4">
-        <PersianDatePicker @bind-Date="myDate" />
+        <PersianDatePicker @bind-Date="myDate"
+                           PlaceHolder="تاریخ تولد"
+                           Label="تولد شما:"/>
     </div>
 </div>
 
