--- a/CodecellComponent.Blazor/Components/PersianDatePickerComponent/PersianDatePicker.razor.scss
+++ b/CodecellComponent.Blazor/Components/PersianDatePickerComponent/PersianDatePicker.razor.scss
@@ -29,7 +29,8 @@
             width: 100%;
 
             &:focus-visible {
-                outline: 0;
+                outline-offset: 2px;
+                outline-color: #0d6efd;
             }
         }
 
