--- a/CodecellBlazorComponent.Sample/Pages/Home.razor
+++ b/CodecellBlazorComponent.Sample/Pages/Home.razor
@@ -14,7 +14,8 @@
         <PersianDatePicker @bind-Date="myDate"
                            PlaceHolder="تاریخ تولد"
                            Label="تولد شما:"
-                           ValueChanged="DateChanged" />
+                           ValueChanged="DateChanged"
+                           DarkMode="false"/>
     </div>
 </div>
 
