--- a/CodecellBlazorComponent.Sample/Pages/Home.razor
+++ b/CodecellBlazorComponent.Sample/Pages/Home.razor
@@ -11,7 +11,7 @@
                            PlaceHolder="تاریخ تولد"
                            Label="تولد شما:"
                            ValueChanged="DateChanged"
-                           DarkMode="false"/>
+                           DarkMode="true"/>
     </div>
 </div>
 
