--- a/CodecellBlazorComponent.Sample/_Imports.razor
+++ b/CodecellBlazorComponent.Sample/_Imports.razor
@@ -8,4 +8,4 @@
 @using Microsoft.JSInterop
 @using CodecellBlazorComponent.Sample
 @using CodecellBlazorComponent.Sample.Layout
-@using CodecellComponent.Blazor.Components.PersianDatePickerComponent
+@using Codecell.Component.Blazor.Components.PersianDatePickerComponent
