--- a/Codecell.Component.Blazor/_Imports.razor
+++ b/Codecell.Component.Blazor/_Imports.razor
@@ -1,2 +1,4 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using Codecell.Component.Blazor.Components.PersianDatePickerComponent
+@using Codecell.Component.Blazor.Components.Shared
+@using Codecell.Component.Blazor.Infrastructure
