--- a/CodecellBlazorComponent.Sample/Pages/Home.razor
+++ b/CodecellBlazorComponent.Sample/Pages/Home.razor
@@ -1,30 +1,57 @@
 ﻿@page "/"
-
+@using System.ComponentModel.DataAnnotations
 <PageTitle>Home</PageTitle>
 
 <h1>Hello, world!</h1>
 
 
-<div class="row" style="direction:rtl">
-    <div class="col-md-4 mt-3">
-        <PersianDatePicker @bind-Date="myDate"
-                           PlaceHolder="تاریخ تولد"
-                           Label="تولد شما:"
-                           ValueChanged="DateChanged"
-                           DarkMode="false"/>
+
+<EditForm Model="@Model" OnValidSubmit="Submit">
+    <DataAnnotationsValidator />
+    <ValidationSummary/>
+    <div class="row" style="direction:rtl">
+        <div class="col-md-4">
+            <InputText class="form-control" @bind-Value="Model.Name" />
+        </div>
+        <div class="col-12"></div>
+        <div class="col-md-4 mt-3">
+            <PersianDatePicker @bind-Date="Model.BirthDate"
+                               PlaceHolder="تاریخ تولد"
+                               Label="تاریخ تولد:"
+                               ValueChanged="DateChanged"
+                               DarkMode="false"
+                               For="()=>Model.BirthDate" 
+                               Immediate="true"/>
+        </div>
+        <div class="col-12 mt-2">
+            <button class="btn btn-primary" type="submit">Submit</button>
+        </div>
     </div>
-</div>
+</EditForm>
 
 
-<p class="mt-2">@myDate</p>
+<p class="mt-2">@Model.BirthDate</p>
 
 
 @code{
 
-    DateTime? myDate;
+    Student Model { get; set; } = new();
 
     void DateChanged(DateTime? value)
     {
         Console.WriteLine($"Date Changed: {value}");
+    }
+
+    public class Student
+    {
+        public string Name { get; set; }
+
+        [Required]
+        public DateTime? BirthDate { get; set; }
+    }
+
+    void Submit()
+    {
+
     }
 }
