Add validation Help

--- a/CodecellBlazorComponent.Sample/Pages/Home.razor
+++ b/CodecellBlazorComponent.Sample/Pages/Home.razor
@@ -46,7 +46,7 @@
     {
         public string Name { get; set; }
 
-        [Required]
+        [Required(ErrorMessage ="تاریخ تولد اجباری است")]
         public DateTime? BirthDate { get; set; }
     }
 
