Add Ctrl+Enter to fill date

--- a/Codecell.Component.Blazor/Components/PersianDatePickerComponent/PersianDatePicker.razor
+++ b/Codecell.Component.Blazor/Components/PersianDatePickerComponent/PersianDatePicker.razor
@@ -9,8 +9,7 @@
                @bind-value="@persianDateFormat"
                @bind-value:event="oninput"
                @onkeyup=OnKeyupHandler
-               @onkeydown=OnKeydownHandler
-               @onkeydown:preventDefault />
+               @onkeydown=OnKeydownHandler />
         @if (For is not null)
         {
             <CustomValidationMessage For="For" OnValidationChanged="OnValidationChanged" @ref="validation" />
